<resources>
    <string name="app_name">GambleFit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="choose_goal">Choose your Weekly Activity Goal:</string>
    <string name="reveal_daily">This is your daily activity goal:</string>
    <string name="daily_minutes"></string>
    <string name="next">Next</string>
    <string name="action_settings">Settings</string>
    <string name="goal_description"> Your Goal today is</string>
    <string name="checkin">Checkin back at GambelFit at 10pm every day to evaluate your activity and win rewards!</string>
    <string name="minutes">min</string>
    <string name="acticoins">20 ActiCoins</string>
    <string name="progress_message">If you hit your goal today, you can earn 10 ActiCoins!</string>
    <string name="welcome">Welcome Back!</string>
    <string name="MVPA_Prompt">How much activity do you think you did today?</string>
    <string name="guess2">Guess!</string>
    <string name="guess">Guess correctly and win 10 more ActiCoins!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="wifi_missing">Please connect to Northwestern Wifi or VPN to continue. Go back to Home and launch the app again</string>
</resources>
