<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:gravity="right"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/acticoins" />



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:text="@string/welcome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="24dp"
            android:gravity="center"
            android:text="@string/MVPA_Prompt" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:orientation="horizontal">

    <Spinner
        android:id="@+id/activity_guesser_spinner"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:layout_width = "wrap_content"
        android:layout_height="wrap_content">

    </Spinner>
    <TextView
            android:paddingTop="8dp"
        android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/minutes" />

</LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="24dp"
            android:gravity="center"
            android:text="@string/guess" />

        <Button
            android:id="@+id/guess"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guess2"
            android:onClick="gotoReveal" />


</LinearLayout>

    </LinearLayout>