<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:gravity="right"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/acticoins" />



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="24dp"
            android:gravity="center"
            android:text="Your Goal for tomorrow is" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:paddingTop="8dp"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:text="@string/daily_minutes" />

            <TextView
                android:paddingTop="8dp"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:text="@string/minutes" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:textSize="19dp"
            android:gravity="center"
            android:text="Bet against FitGame for more money!" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="24dp"
            android:gravity="center"
            android:text="Commit to " />

        <Spinner
            android:id="@+id/gamble_spinner"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="24dp"
            android:gravity="center"
            android:text="for " />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="24dp"
            android:gravity="center"
            android:text="@string/daily_minutes" />

        <Button
            android:id="@+id/next"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set tomorrow's goal"
            android:onClick="gotoNightHolding" />

    </LinearLayout>

</LinearLayout>